# task2_fastAPI

./: main.py  pyproject.toml
